load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-lb
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
