ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: my-app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-service-np
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
